--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
     <script src="C:/Program Files/p5/p5.js"></script>
     <script src="game.js"></script>
-    <script src="Person.js"></script>
+    <script src="Person/Person.js"></script>
+    <script src="Person/Shooter.js"></script>
+    <script src="Person/Healer.js"></script>
     <script src="Bullet.js"></script>
   </head>
   <body>
