--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="C:/Program Files/p5/p5.js"></script>
+    <script src="p5/p5.js"></script>
     <script src="game.js"></script>
     <script src="Person/Person.js"></script>
     <script src="Person/Shooter.js"></script>
