--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="Person/Shooter.js"></script>
     <script src="Person/Healer.js"></script>
     <script src="Bullet.js"></script>
+    <script src="Healing.js"></script>
   </head>
   <body>
   </body>
