--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <script src="Position.js"></script>
     <script src="Queue.js"></script>
   </head>
-  <body>
+  <body oncontextmenu="return false;">
   </body>
 </html>
