--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="PathFinder.js"></script>
     <script src="Position.js"></script>
     <script src="Queue.js"></script>
+    <script src="GameMap.js"></script>
   </head>
   <body oncontextmenu="return false;">
   </body>
