--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="p5/p5.js"></script>
+    <script src="p5/addons/p5.dom.js"></script>
     <script src="game.js"></script>
     <script src="Person/Person.js"></script>
     <script src="Person/Shooter.js"></script>
